# crates2pkgbuild

./: Cargo.toml  packages.demo.toml
assets/mini_crates_io/: README.md
assets/mini_crates_io/static/cargo-pgo/: cargo-pgo-0.2.8.crate
assets/mini_crates_io/static/inlyne/: inlyne-0.4.2.crate
assets/mini_crates_io/static/ra-multiplex/: ra-multiplex-0.2.4.crate
assets/mini_crates_io/static/regex-cli/: regex-cli-0.2.0.crate
assets/mini_crates_io/static/to-html/: to-html-0.1.5.crate
src/: main.rs
src/tests/: cache.rs  mod.rs  snaps.rs  utils.rs
src/tests/snapshots/: crates2pkgbuild__tests__snaps__cargo_pgo.snap  crates2pkgbuild__tests__snaps__inlyne.snap  crates2pkgbuild__tests__snaps__ra_multiplex.snap  crates2pkgbuild__tests__snaps__regex_cli.snap  crates2pkgbuild__tests__snaps__to_html.snap
